--- a/public/css/nePatient.css
+++ b/public/css/nePatient.css
@@ -17,18 +17,17 @@ a {
     font-family: "Montserrat", sans-serif;
 }
 .links{
-    margin-right: 5%;
+    /* margin-right: 5%; */
+    margin-left: 30%;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    width: 40%;
-    width:45%;
+    width:65%;
 }
 .links ul li{
     display: inline-block;
     list-style-type: none;
     margin-right: 10%;
     padding-top: 3%;
-
 }
 hr{
     border: 1px solid #ccc;
@@ -43,7 +42,7 @@ hr{
     display: grid;
     place-items: center;
     margin-right: 7%;
-    margin-top: 5%;
+    margin-top: -5%;
 }
 .fnlabel{
     font-weight: 500;
@@ -111,7 +110,7 @@ hr{
   outline: none;
 }
 .email{
-  margin-left: 25%;
+  margin-left: 30%;
 }
 .emailinput{
   border: 1px solid #ccc;
@@ -141,7 +140,7 @@ hr{
   outline: none;
 }
 .state{
-  margin-left: 25%;
+  margin-left: 30%;
 }
 .stateinput{
   border: 1px solid #ccc;
@@ -191,7 +190,7 @@ hr{
   outline: none;
 }
 .relationship{
-  margin-left: 25%;
+  margin-left: 30%;
 }
 .relationshipinput{
   border: 1px solid #ccc;
@@ -203,6 +202,7 @@ hr{
 }
 .buttons{
   margin-top: 7%;
+  margin-left: 130%;
 }
 .genbtn{
   padding: 10px 10px;
@@ -212,10 +212,11 @@ hr{
 }
 .save{
   padding: 10px 10px;
-  background-color: orange;
+  background-color: green;
   border-radius: 5px;
-  border: 1px solid orange;
+  border: 1px solid green;
   margin-left: 4%;
+  color: #fff;
 }
 table {
   border-collapse: collapse;
@@ -225,6 +226,9 @@ th, td {
   border: 1px solid black;
   padding: 5px;
   text-align: left;
+}
+.pid{
+
 }
   /* Responsive styles
   @media (max-width: 768px) {
